name:                Meibo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/Haskell/
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Meibo
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -O3
  build-depends:       base
                     , Util
                     , time
                     , parsec
                     , mtl
                     , process
                     , containers
  other-modules:       Meibo.Base
  default-language:    Haskell2010

library
  exposed-modules:     Meibo.Base
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base
                     , Util
                     , time
                     , text
                     , tagsoup
                     , mtl
                     , parsec
                     , containers
                     , async
                     , process

source-repository head
  type:     git
  location: https://github.com/jumpeiito/Haskell/tree/develop/Meibo

-- test-suite Meibo-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , Meibo
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/Meibo
