name:                Snews
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/Snews#readme
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable snews
  hs-source-dirs:      ., Snews, F:/Haskell/Util/Util/
  main-is:             snews.hs
  ghc-options:         -O3
  build-depends:       base
                     , Util
                     , mtl
                     , containers
                     , async
                     , time
                     , tagsoup
                     , optparse-applicative
                     , network
                     , HTTP
                     , parsec
                     , text
                     , text-icu
                     , bytestring
  other-modules:     Snews.NewsArticle.Akahata
                     Snews.NewsArticle.Base
                     Snews.NewsArticle.Common
                     Snews.OrgParse
  default-language:    Haskell2010

