name:                Snews
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/Haskell/
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable snews
  hs-source-dirs:      ., Snews, F:/Haskell/Util/Util/
  main-is:             snews.hs
  ghc-options:         -O3
  build-depends:       base
                     , Util
                     , mtl
                     , containers
                     , async
                     , time
                     , tagsoup
                     , optparse-applicative
                     , network
                     , HTTP
                     , parsec
                     , text
                     , text-icu
                     , bytestring
                     , yaml
  other-modules:     Snews.NewsArticle.Akahata
                     Snews.NewsArticle.Base
                     Snews.NewsArticle.Common
                     Snews.OrgParse
  default-language:    Haskell2010

library
  Exposed-modules:     Snews.NewsArticle.Akahata
                       Snews.NewsArticle.Base
                       Snews.NewsArticle.Common
                       Snews.OrgParse
  default-language:    Haskell2010
  hs-source-dirs:      .
  build-depends:       base
                     , Util
                     , time
                     , text
                     , tagsoup
                     , mtl
                     , parsec
                     , containers
                     , async

test-suite Snews-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, Snews
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , Snews
                     , time
                     , tagsoup
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jumpeiito/Haskell/tree/develop/Snews
  