name:                Util
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/Util#readme
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      ., Util
  exposed-modules:     Util
                       Util.KanParse
                       Util.Strdt
                       Util.Telephone
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , directory
                     , containers
                     , text
                     , bytestring
                     , tagsoup
                     , parsec
                     , time
  default-language:    Haskell2010
