name:                Util
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/Haskell/
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      ., Util
  exposed-modules:     Util
                       Util.KanParse
                       Util.Strdt
                       Util.Telephone
                       Util.Holiday
                       Util.StrEnum
                       Util.ZenkakuHankaku
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , directory
                     , containers
                     , text
                     , bytestring
                     , tagsoup
                     , parsec
                     , time
                     , yaml
                     , hspec
                     , QuickCheck
                     , process
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jumpeiito/Haskell/tree/develop/Util