name:                Util
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/Haskell/
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      ., Util
  exposed-modules:     Util
                       Util.KanParse
                       Util.KanParseB
                       -- Util.DateFormatta
                       Util.Strdt
                       Util.Strbt
                       Util.Tele
                       Util.Telephone
                       Util.Holiday
                       Util.StrEnum
                       Util.ZenkakuHankaku
                       Util.Kumiaihi
                       Util.Exception
                       Util.Yaml
                       Util.Address
                       Util.MonadPath
                       Util.Range
                       Data.Text.Levenshtein
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , directory
                     , containers
                     , text
                     , transformers
                     , bytestring
                     , tagsoup
                     , attoparsec
                     , parsec
                     , time
                     , yaml
                     , hspec
                     , QuickCheck
                     , process
                     , parallel
                     , async
                     , safe-exceptions
                     , aeson
                     , yaml
                     , bytestring
                     , extensible
                     , conduit
                     , lens
                     , monad-skeleton
                     , vector
                     , split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jumpeiito/Haskell/tree/develop/Util
