name:                Zipcode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/Zipcode#readme
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable Zipcode
  hs-source-dirs:      app, ../Util/Util
  main-is:             zipcode.hs
  ghc-options:         -O3 -threaded
  build-depends:       base
                     , Util
                     , ZipDist
                     , ZipFormatta
                     , text
                     , parsec
                     , mtl
                     , containers
                     , tagsoup
                     , array
                     , parallel
  default-language:    Haskell2010

-- test-suite Zipcode-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , Zipcode
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/jumpeiito/Zipcode
