name:                gcal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/gcal#readme
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, .
  exposed-modules:     Lib
                     , Gcal.Parameter
                     , Gcal.Request
                     , Gcal.Event
                     , Gcal.Org
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , transformers
                     , resourcet
                     , HTTP
                     , http-conduit
                     , aeson
                     , time
                     , parsec
                     , text
                     , hspec
  default-language:    Haskell2010

executable gcal-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gcal
                     , mtl
                     , HTTP
                     , resourcet
                     , network-uri
                     , bytestring
                     , http-conduit
                     , conduit
                     , conduit-extra
                     , transformers
                     , authenticate-oauth
                     , aeson
                     , Util
                     , process
                     , directory
                     , time
                     , parsec
  default-language:    Haskell2010

test-suite gcal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gcal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jumpeiito/gcal
