name:                kensin
version:             0.3
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/kensin#readme
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Kensin.Config
                     , Kensin.Base
                     , Kensin.Receipt
                     , Kensin.Meibo
                     , Kensin.Count
  build-depends:       base >= 4.7 && < 5
                     , array
                     , time
                     , Util
                     , mtl
                     , parsec
                     , containers
  default-language:    Haskell2010

executable kensin
  hs-source-dirs:      app, src, .
  main-is:             Main.hs
  ghc-options:         -O3
  build-depends:       base
                     , process
                     , time
                     , Util
                     , containers
                     , kensin
                     , mtl
                     , array
                     , parsec
                     , optparse-applicative
  other-modules:       Kensin.Config
                     , Kensin.Base
                     , Kensin.Receipt
                     , Kensin.Meibo
                     , Kensin.Count
  default-language:    Haskell2010
