name:                maketags
version:             1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jumpeiito/Haskell/
license:             BSD3
license-file:        LICENSE
author:              Jumpei Ito
maintainer:          junnpit@gmail.com
copyright:           2016 Jumpei Ito
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable makeTags
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3
  build-depends:       base
                     , Util
                     , process
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jumpeiito/Haskell/tree/develop/maketags